--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "~5.4",
         "symfony/symfony": "~2.4",
         "knplabs/minibus": "dev-master",
-        "doctrine/inflector": "~1.0@dev"
+        "doctrine/inflector": "~1.0@dev",
+        "symfony/framework-bundle": "~2.4@dev"
     },
     "require-dev": {
         "phpspec/phpspec": "*",
