--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/symfony": "~2.4",
         "knplabs/minibus": "dev-master",
         "doctrine/inflector": "~1.0@dev",
-        "symfony/framework-bundle": "~2.4@dev"
+        "symfony/framework-bundle": "*"
     },
     "require-dev": {
         "phpspec/phpspec": "*",
