--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/symfony": "~2.4",
         "knplabs/minibus": "dev-master",
         "doctrine/inflector": "~1.0@dev",
-        "symfony/framework-bundle": "*"
+        "symfony/framework-bundle": "*",
+        "jms/serializer-bundle": "0.13.*@dev"
     },
     "require-dev": {
         "phpspec/phpspec": "*",
