--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: php
 php:
     - 5.4
 before_script:
+    - composer selfupdate
     - composer install --prefer-source
 script:
     - bin/phpspec run -fpretty --verbose
